--- a/index.html
+++ b/index.html
@@ -7,15 +7,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="container">
-      <h1>Dice Roller</h1>
-
-      <script src="index.js"></script>
-      <label># of dice:</label>
-      <input type="number" id="numOfDice" value="1" min="1" />
-      <button onclick="rollDice()">Roll dice</button>
-      <div id="diceResult"></div>
-      <div id="diceImages"></div>
+    <div id="clock-container">
+      <div id="clock">00:00:00</div>
     </div>
+
+    <script src="index.js"></script>
   </body>
 </html>
